--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker: Creando containers sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integración continua: Madures y productividad en el desarrollo de Software </li>
-         <li> Kubernetes </li>
+         <li> : Introduccion a la orquestacion de containers </li>
      </ul>
 </body>
 </html>
