--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
      <ul>
          <li> Vagrant: Gerenciando maquinas virtuales </li>
          <li> Docker: Creando containers sin dolor de cabeza </li>
-         <li> Ansible </li>
+         <li> Ansible: Su infraestructura como codigo </li>
          <li> Integración continua: Madures y productividad en el desarrollo de Software </li>
-         <li> : Introduccion a la orquestacion de containers </li>
+         <li> Kubernetes: Introduccion a la orquestacion de containers </li>
      </ul>
 </body>
 </html>
